# frontkeep

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  RFC-0001-entity-model.md  RFC-0002-policy-and-sandbox.md
.github/workflows/: ci.yml  deploy-website.yml  release.yml
charts/asgard/: Chart.yaml  values.yaml
charts/asgard/templates/: deployment.yaml  service.yaml
charts/frontkeep/: Chart.yaml  values.yaml
charts/frontkeep/templates/: deployment.yaml  service.yaml
crates/api/: Cargo.toml
crates/api/src/: error.rs  graphql.rs  lib.rs
crates/asgard/: Cargo.toml
crates/asgard/src/: main.rs
crates/asgard/tests/: cli_mcp_parity.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: entity.rs  error.rs  ingest.rs  lib.rs  reconcile.rs  repo.rs  seed.rs  standards.rs  validation.rs
crates/cli/: Cargo.toml
crates/cli/src/: chat.rs  config.rs  lib.rs  mcp.rs  render.rs  seed.rs
crates/eval/: Cargo.toml
crates/eval/src/: lib.rs
crates/frontkeep/: Cargo.toml
crates/frontkeep/src/: main.rs
crates/frontkeep/tests/: cli_mcp_parity.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: error.rs  guardrails.rs  keys.rs  lib.rs  provider.rs  registry.rs  tools.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs  oidc.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/policies/: default.cedar
crates/policy/src/: cedar_engine.rs  lib.rs
crates/provision/: Cargo.toml
crates/provision/src/: lib.rs  manifest.rs  repo.rs  runlog.rs  stub.rs  tfstate.rs
crates/provision/src/connectors/: exec.rs  litellm.rs  mod.rs  terraform.rs
crates/provision/src/cost/: aws_ce.rs  databricks.rs  exec.rs  flat.rs  forecast.rs  gateway.rs  litellm.rs  mod.rs  qa.rs  report.rs  rollup.rs
crates/provision/src/secrets/: builtin.rs  mod.rs
crates/registry/: Cargo.toml
crates/registry/src/: cost.rs  evidence.rs  governance.rs  guidance.rs  knowledge_seed.rs  lib.rs  mcp_servers.rs  promotion.rs  promotion_reviewer.rs  recipes.rs  review.rs  review_jobs.rs  skills.rs  standards.rs  versions.rs
crates/reviewer/: Cargo.toml
crates/reviewer/src/: code_review.rs  lib.rs  llm_judge.rs  manifest.rs  repo.rs  skill_review.rs  webhook.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/skills/: Cargo.toml
crates/skills/src/: dest.rs  lib.rs  model.rs  translate.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_init.sql  0002_registry_cost.sql  0003_secrets.sql  0004_cost_rollup.sql  0005_user_roles.sql  0006_guidance.sql  0007_recipes.sql  0008_guidance_status.sql  0009_recipe_body.sql  0010_personal_access_tokens.sql  0011_evidence_fields.sql  0012_review_dates.sql  0013_recipe_status.sql  0014_guidance_category.sql  0015_standards.sql  0016_knowledge_versions.sql  0017_pat_suffix.sql  0018_tf_state.sql  0019_leases.sql  0020_tf_state_version.sql  0021_cost_anomaly_unique.sql  0022_mcp_servers.sql  0023_async_provisioning.sql  0026_skills.sql  0027_provision_retry.sql  0028_provision_runs.sql
crates/storage/src/: audit.rs  leases.rs  lib.rs  migrations.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: lib.rs
docs/: docusaurus.config.js  package-lock.json  package.json
docs/docs/: architecture.md  authoring-a-service.md  cli.md  connect-agent.md  databricks.md  deploy-agent.md  deploy.md  entity-reference.md  inference-backends.md  install.md  intro.md  migrate-app.md  onboarding-loop.md  quickstart.md  review-gate.md  upgrade.md
modules/auth0/application/: main.tf  outputs.tf  variables.tf
modules/aws/alb/: main.tf
modules/aws/dynamodb-table/: main.tf
modules/aws/ec2-instance/: main.tf
modules/aws/ecr-repository/: main.tf
modules/aws/ecs-service/: main.tf  outputs.tf  variables.tf
modules/aws/ecs-task/: main.tf
modules/aws/iam-grant/: main.tf
modules/aws/rds-postgres/: main.tf
modules/aws/s3-bucket/: main.tf
modules/aws/secretsmanager-secret/: main.tf
modules/databricks/job/: main.tf
modules/local-demo/: main.tf
packaging/systemd/: asgard.service  frontkeep.service
reviewers/code-review/: reviewer.yaml
schemas/: agent.schema.json  dataset.schema.json  eval.schema.json  mcp.schema.json  project.schema.json  prompt.schema.json  service.schema.json
schemas/examples/: agent.example.yaml  dataset.example.yaml  eval.example.yaml  mcp.example.yaml  project.example.yaml  prompt.example.yaml
scripts/: aws-e2e.sh  cleanroom-check.sh  cleanroom-denylist.txt  e2e.sh  install.sh  stress.sh
seed/: AGENTS.md  README.md  project.yaml
seed/.agent/: DONE.md  PROMPTS.md  SECURITY.md  STANDARDS.md  WORKFLOW.md
services/alb/: README.md  service.yaml
services/anthropic/: service.yaml
services/auth0-application/: service.yaml
services/databricks/: README.md  service.yaml
services/databricks-job/: README.md  service.yaml
services/databricks-model-serving/: README.md  service.yaml
services/databricks-sql-warehouse/: README.md  service.yaml
services/databricks-uc-volume/: README.md  service.yaml
services/dynamodb-table/: service.yaml
services/ec2-instance/: service.yaml
services/ecr-repository/: service.yaml
services/ecs-service/: README.md  service.yaml
services/ecs-task/: service.yaml
services/exec-echo/: service.yaml
services/litellm/: service.yaml
services/litellm-key/: service.yaml
services/openai/: service.yaml
services/random-secret/: service.yaml
services/rds-postgres/: service.yaml
services/s3-bucket/: service.yaml
services/secretsmanager-secret/: README.md  service.yaml
services/tf-demo/: service.yaml
templates/code-review/: README.md  agent.yaml  cases.json  eval.yaml  prompt.yaml
terraform/asgard/: main.tf  outputs.tf  variables.tf
terraform/frontkeep/: main.tf  outputs.tf  variables.tf
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
website/public/: robots.txt  sitemap.xml
website/scripts/: sync-docs.mjs
website/src/: content.config.ts
(+64 files in other folders)
