[workspace]
resolver = "2"
members = [
    "crates/storage",
    "crates/catalog",
    "crates/policy",
    "crates/gateway",
    "crates/registry",
    "crates/reviewer",
    "crates/skills",
    "crates/provision",
    "crates/workflow",
    "crates/eval",
    "crates/runtime",
    "crates/identity",
    "crates/api",
    "crates/cli",
    "crates/mcp",
    "crates/frontkeep",
]

[workspace.package]
version = "0.26.0"
edition = "2021"
license = "Apache-2.0"
authors = ["The Frontkeep Authors"]
repository = "https://github.com/glemmestad/frontkeep"
rust-version = "1.82"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# serde / formats
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# errors / logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# storage
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "any",
    "sqlite",
    "postgres",
] }

# ids / time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# web / api
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
async-graphql = "7"
async-graphql-axum = "7"

# cli
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

# http client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# policy
cedar-policy = "4"

# schema validation
jsonschema = "0.18"

# misc
regex = "1"
sha2 = "0.10"
base64 = "0.22"
argon2 = "0.5"
once_cell = "1"
rust-embed = "8"
mime_guess = "2"
aes-gcm = "0.10"

# internal crates
frontkeep-storage = { path = "crates/storage" }
frontkeep-catalog = { path = "crates/catalog" }
frontkeep-policy = { path = "crates/policy" }
frontkeep-identity = { path = "crates/identity" }
frontkeep-gateway = { path = "crates/gateway" }
frontkeep-registry = { path = "crates/registry" }
frontkeep-reviewer = { path = "crates/reviewer" }
frontkeep-skills = { path = "crates/skills" }
frontkeep-provision = { path = "crates/provision" }
frontkeep-workflow = { path = "crates/workflow" }
frontkeep-eval = { path = "crates/eval" }
frontkeep-runtime = { path = "crates/runtime" }
frontkeep-api = { path = "crates/api" }
frontkeep-mcp = { path = "crates/mcp" }
frontkeep-cli = { path = "crates/cli" }

[profile.dev]
# Debuginfo off: large dependencies (e.g. cedar-policy) have a much smaller
# compile-time working set without DWARF, which matters on memory-constrained
# build hosts. Panic locations (file:line) are unaffected.
debug = 0

[profile.release]
strip = true
lto = "thin"
