[package]
name = "frontkeep-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frontkeep-storage.workspace = true
frontkeep-catalog.workspace = true
frontkeep-gateway.workspace = true
frontkeep-workflow.workspace = true
frontkeep-registry.workspace = true
frontkeep-provision.workspace = true
frontkeep-identity.workspace = true
frontkeep-skills.workspace = true
frontkeep-reviewer.workspace = true
axum.workspace = true
tower-http.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
