[package]
name = "frontkeep-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frontkeep-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
sqlx.workspace = true
chrono.workspace = true
jsonschema.workspace = true
reqwest.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
