[package]
name = "asgard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
asgard-catalog.workspace = true
asgard-storage.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
