[package]
name = "asgard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
asgard-catalog.workspace = true
asgard-storage.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
rmcp = { version = "1", features = [
    "client",
    "transport-streamable-http-client-reqwest",
    "reqwest",
] }
comfy-table = "7"
toml = "0.8"

[dev-dependencies]
tokio.workspace = true
