[package]
name = "frontkeep-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frontkeep-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
sqlx.workspace = true
regex.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
