[package]
name = "frontkeep"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Open-source control plane for AI/agent development"

[[bin]]
name = "frontkeep"
path = "src/main.rs"

[dependencies]
frontkeep-storage.workspace = true
frontkeep-catalog.workspace = true
frontkeep-policy.workspace = true
frontkeep-gateway.workspace = true
frontkeep-workflow.workspace = true
frontkeep-registry.workspace = true
frontkeep-reviewer.workspace = true
frontkeep-provision.workspace = true
frontkeep-eval.workspace = true
frontkeep-identity.workspace = true
frontkeep-api.workspace = true
frontkeep-cli.workspace = true
frontkeep-mcp.workspace = true
axum.workspace = true
clap.workspace = true
clap_complete = "4"
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
dotenvy.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
regex.workspace = true
