[package]
name = "frontkeep-identity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frontkeep-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
argon2 = { workspace = true, features = ["std"] }
reqwest.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
