[package]
name = "asgard-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
asgard-catalog.workspace = true
asgard-gateway.workspace = true
asgard-identity.workspace = true
asgard-registry = { workspace = true, features = ["schemars"] }
asgard-provision.workspace = true
asgard-workflow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
rmcp = { version = "1", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-io",
] }
schemars = "1"
http = "1"

[dev-dependencies]
asgard-storage.workspace = true
asgard-policy.workspace = true
tokio.workspace = true
