[package]
name = "frontkeep-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frontkeep-catalog.workspace = true
frontkeep-gateway.workspace = true
frontkeep-identity.workspace = true
frontkeep-registry = { workspace = true, features = ["schemars"] }
frontkeep-skills = { workspace = true, features = ["schemars"] }
frontkeep-provision.workspace = true
frontkeep-workflow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
rmcp = { version = "1", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "transport-io",
] }
schemars = "1"
http = "1"

[dev-dependencies]
frontkeep-storage.workspace = true
frontkeep-policy.workspace = true
tokio.workspace = true
