[package]
name = "asgard-policy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
cedar-policy.workspace = true

[dev-dependencies]
tokio.workspace = true
