[package]
name = "asgard-provision"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
asgard-storage.workspace = true
asgard-workflow.workspace = true
asgard-registry.workspace = true
asgard-gateway.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
rust-embed.workspace = true
aes-gcm.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
asgard-catalog.workspace = true
asgard-policy.workspace = true
