[package]
name = "frontkeep-provision"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
frontkeep-storage.workspace = true
frontkeep-workflow.workspace = true
frontkeep-registry.workspace = true
frontkeep-gateway.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
rust-embed.workspace = true
aes-gcm.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
frontkeep-catalog.workspace = true
frontkeep-policy.workspace = true
