[package]
name = "frontkeep-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
frontkeep-storage.workspace = true
frontkeep-catalog.workspace = true
frontkeep-gateway.workspace = true
frontkeep-workflow.workspace = true
frontkeep-skills.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
schemars = { version = "1", optional = true }

[features]
schemars = ["dep:schemars"]

[dev-dependencies]
tokio.workspace = true
frontkeep-policy.workspace = true
