[package]
name = "asgard-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
base64.workspace = true
sha2.workspace = true
schemars = { version = "1", optional = true }

[features]
schemars = ["dep:schemars"]
