[package]
name = "frontkeep-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frontkeep-storage.workspace = true
frontkeep-policy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
